add fetch client
