# shared/openApi/api-schema.yaml
@@ -8,6 +8,7 @@ servers:
 paths:
   /signup:
     post:
+        operationId: post-signup
         summary: "Create a new user"
         responses:
             201:
@@ -18,6 +19,7 @@ paths:
                             $ref: "#/components/schemas/Success"
   /me:
     get:
+        operationId: get-me
         summary: "Get current user"
         responses:
             200:
@@ -27,6 +29,7 @@ paths:
                         schema:
                             $ref: "#/components/schemas/User"
     patch:
+        operationId: patch-me
         summary: "Update current user"
         requestBody:
           required: true
@@ -48,6 +51,7 @@ paths:
                   $ref: "#/components/schemas/Success"
   /challenges:
     get:
+        operationId: get-challenges
         summary: "Get all challenges"
         responses:
             200:
@@ -59,6 +63,7 @@ paths:
                             items:
                                 $ref: "#/components/schemas/Challenge"
     post:
+        operationId: post-challenges
         summary: "Create a new challenge"
         requestBody:
           required: true
@@ -93,6 +98,7 @@ paths:
                             $ref: "#/components/schemas/Success"
   /challenge_members:
       post:
+        operationId: post-challenge-members
         summary: "Join a challenge"
         requestBody:
           required: true
@@ -130,10 +136,11 @@ components:
             properties:
                 id:
                   type: "string"
-                name:
+                title:
                   type: "string"
                 description:
                   type: "string"
+                  nullable: true
                 targetDate:
                   type: "string"
                   format: "date"
